# carculator

./: AGENTS.md  CHANGELOG.md  MANIFEST.in  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
carculator/: __init__.py  car_input_parameters.py  inventory.py  model.py
carculator/data/: default_parameters.json  extra_parameters.json
conda/: meta.yaml
dev/: Input data.xlsx
docs/: conf.py
examples/: Examples.ipynb
tests/: test_inventory.py  test_model.py  test_vehicle_input_parameters.py
tests/fixtures/: test_model_results.xlsx
