[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carculator"
version = "1.9.5"
description = "Prospective life cycle assessment of vehicles made blazing fast"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Romain Sacchi", email = "romain.sacchi@psi.ch" },
    { name = "Chris Mutel", email = "christopher.mutel@psi.ch" },
]
dependencies = [
    "carculator_utils>=1.3.5",
]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/romainsacchi/carculator"

[tool.setuptools.packages.find]
include = ["carculator*"]

[tool.setuptools.package-data]
carculator = [
    "data/*.csv",
    "data/*.json",
    "data/*.yaml",
    "data/*.yml",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
